third_party/move/move-compiler-v2/tests/lambda/inline-parity/inlining1.lambda.exp

Diagnostics:
error: Currently, lambda expressions must explicitly declare `move` capture of free variables, except when appearing as an argument to an inline functioncall.
  ┌─ tests/lambda/inline-parity/inlining1.move:8:13
  │
8 │         foo(|_| 3, 10)
  │             ^^^^^
